laba2/src/main/java/fotius/example/musicapp/domain/error/SongNotFoundException.java
package fotius.example.musicapp.domain.error;

public class SongNotFoundException extends EntityNotFoundException {
    public SongNotFoundException(Long id) {
        super("Song with id '%d' not found".formatted(id));
    }
}
